[gd_scene load_steps=8 format=2]

[ext_resource path="res://objects/Fonts/InvenoryFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://sprites/UI/inventory.png" type="Texture" id=2]
[ext_resource path="res://objects/Interactive/inventory/ItemList.gd" type="Script" id=3]
[ext_resource path="res://sprites/UI/inventory_hovered.png" type="Texture" id=4]
[ext_resource path="res://objects/Interactive/inventory/show_bag.gd" type="Script" id=6]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = ExtResource( 1 )

[node name="Invenory" type="Control" groups=[
"inventory",
]]
light_mask = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 250.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="MarginContainer"]
margin_right = 1920.0
margin_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource( 1 )
custom_fonts/font = ExtResource( 1 )
max_columns = 50
same_column_width = true
icon_mode = 0
icon_scale = 0.5
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="InvIcon" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -64.5898
margin_top = -64.749
margin_right = -0.589844
margin_bottom = -0.749023
hint_tooltip = "Открыть инвентарь"
theme = SubResource( 2 )
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="pressed" from="InvIcon" to="." method="_on_InvIcon_pressed"]
